[gd_scene load_steps=5 format=3 uid="uid://dialogue_ui_scene"]

[ext_resource type="Script" path="res://scenes/ui/dialogue_ui.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.05, 0.05, 0.08, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.25, 0.25, 0.35, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
content_margin_left = 24.0
content_margin_top = 18.0
content_margin_right = 24.0
content_margin_bottom = 18.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_normal"]
bg_color = Color(0.12, 0.12, 0.16, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.35, 0.35, 0.45, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
content_margin_left = 16.0
content_margin_top = 10.0
content_margin_right = 16.0
content_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.18, 0.18, 0.24, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.5, 0.5, 0.65, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
content_margin_left = 16.0
content_margin_top = 10.0
content_margin_right = 16.0
content_margin_bottom = 10.0

[node name="DialogueUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1_script")

[node name="Panel" type="PanelContainer" parent="."]
mouse_filter = 0
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -220.0
offset_right = -40.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SpeakerLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.75, 0.4, 1)
theme_override_font_sizes/font_size = 20
text = "Speaker Name"

[node name="TextLabel" type="RichTextLabel" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.92, 0.92, 0.92, 1)
theme_override_font_sizes/normal_font_size = 17
bbcode_enabled = true
text = "Dialogue text goes here. This will be displayed with a typewriter effect."
scroll_active = false

[node name="BottomRow" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 8

[node name="ChoicesContainer" type="HBoxContainer" parent="Panel/VBox/BottomRow"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 10

[node name="NextIndicator" type="Button" parent="Panel/VBox/BottomRow"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.85, 0.85, 0.9, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.7, 0.7, 0.8, 1)
theme_override_font_sizes/font_size = 15
text = "Continue â–¶"
flat = true

